Add css comments to make it easier to read

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class ="footer">
-            <h2>Copyright @ The Odin Project 2021</h2>
+            <footer><h2>Copyright @ The Odin Project 2021</h2></footer>
         </div>
       </div>
 </body>
