--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="flex-container">
         <div class="header">
             <div class ="left">
-                Header Logo
+                <h1>Header Logo</h1>
             </div>
             <div class="right">
                 <h2 class="headlink">header link one </h2>
