Fill the upper content section

--- a/index.html
+++ b/index.html
@@ -19,21 +19,24 @@
             </div>
         </div>
         <div class="upperContent">
-            <div class="left">
-                <div class="title">
-                    <h1>This website is awesome</h1>
+            <div class ="middle">
+                <div class="left">
+                    <div class="title">
+                        <h1>This website is awesome</h1>
+                    </div>
+                    <div class="content">
+                        <h3>This website has some subtext that goes here 
+                            under the main title. It's a smaller font and 
+                            the color is lower contrast</h3>
+                    </div>
+                    <div class="signUp">
+                        <button class="button" type ="button" name ="Sign Up">
+                        <h4>Sign up </h4>
+                    </button></div>
                 </div>
-                <div class="content">
-                    <h3>This website has some subtext that goes here 
-                        under the main title. It's a smaller font and 
-                        the color is lower contrast</h3>
-                </div>
-                <div class="signUp">
-                    <button type ="button" name ="Sign Up">
-                    Sign up
-                </button></div>
-            </div>
-            <div class="right"> <img src="" alt="Placeholder for an image"> I am an image</div>
+                <div class="right"> <img src="deer-7124972_1920.jpg" alt="Placeholder for an image"></div>
+
+            </div>    
         </div>
         <div class="midContent">
             <div class ="upper">
