Fill the middle section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                         <h4>Sign up </h4>
                     </button></div>
                 </div>
-                <div class="right"> <img src="deer-7124972_1920.jpg" alt="Placeholder for an image"></div>
+                <div class="right">
+                    <img src="deer-7124972_1920.jpg" alt="Placeholder for an image">
+                </div>
 
             </div>    
         </div>
@@ -46,7 +48,7 @@
                 <div class="rectangles">
                     <div class="upper"></div>
                     <div class="lower">
-                        <h4>This is some subtext for
+                        <h4>This is some subtext under an ilustration or
                             some image.
                         </h4>
                     </div>
@@ -54,7 +56,7 @@
                 <div class="rectangles">
                     <div class="upper"></div>
                     <div class="lower">
-                        <h4>This is some subtext for
+                        <h4>This is some subtext under an ilustration or
                             some image.
                         </h4>
                     </div>
@@ -62,7 +64,7 @@
                 <div class="rectangles">
                     <div class="upper"></div>
                     <div class="lower">
-                        <h4>This is some subtext for
+                        <h4>This is some subtext under an ilustration or
                             some image.
                         </h4>
                     </div>
@@ -70,7 +72,7 @@
                 <div class="rectangles">
                     <div class="upper"></div>
                     <div class="lower">
-                        <h4>This is some subtext for
+                        <h4>This is some subtext under an ilustration or
                             some image.
                         </h4>
                     </div>
