Finish the Landing Page

--- a/index.html
+++ b/index.html
@@ -83,24 +83,24 @@
         <div class ="lowerContent">
             <div class="group">
                 <div class ="quote">
-                    <h2>This is an inspiring quote, or a testimonial
+                    <h2 class ="h2">This is an inspiring quote, or a testimonial
                         from a customer. Maybe it's just filling up space,
                         or maybe people will actually read it. Who knows? All I know
                         is that it looks nice.
                     </h2>
                 </div>
-                <div class="quotePerson"><h3>Thor, God of Thunder</h3></div>
+                <div class="quotePerson"><h3>-Thor, God of Thunder</h3></div>
             </div>
         </div>
         <div class ="lowestContent">
             <div class="group">
                 <div class="left">
-                    <div class="cTA"></div>
-                    <div class="cTAtext"></div>
+                    <div class="cTA"><h2>Call to action! It's time!</h2></div>
+                    <div class="cTAtext">Sign up for our product by clicking the button right over there!</div>
                 </div>
                 <div class="right">
                     <div class ="button">
-                        <button type="button" name="Sign up">
+                        <button class ="button" type="button" name="Sign up">
                             Sign Up
                         </button>
                     </div>
